# Game-Boy-Sim

./: .Memory.cpp.swp  .Memory.h.swp  .gitignore  BUILD.md  CMakeLists.txt  Decode.cpp  GBLoader  GBLoader.cpp  GBLoader.h  Makefile  Memory.cpp  Memory.h  PPUnit.cpp  PPUnit.h  Pixel.cpp  Pixel.h  Registers.cpp  Registers.h  Sim.cpp  Sim.h  Tools.cpp  Tools.h  bitop_out  gameplan.txt  gb  gb.cpp  gb.h  makefile  out.tx  out.txt
GB_build/: CMakeCache.txt  GB  Makefile  cmake_install.cmake
Instructions/: Arithmetic.cpp  BitOps.cpp  BitShift.cpp  Jump.cpp  Load.cpp  Misc.cpp  Stack.cpp
SDL_Demo/: CMakeLists.txt  EventLoop.cpp  Makefile  SDL_PixelRender.cpp  SDL_RenderDrawLine.cpp  SDL_keyInput.cpp  SDLdemo.cpp  makefile  oldthing.cpp  pixel_arr.cpp  pixelmod  pixelmod.cpp  present2.cpp  readmeSDL.txt  test.cpp  writePixel  writePixel.cpp
SDL_Demo/pixel_arr.dSYM/Contents/: Info.plist
SDL_Demo/pixel_arr.dSYM/Contents/Resources/DWARF/: pixel_arr
SDL_Demo/pixelmod.dSYM/Contents/: Info.plist
SDL_Demo/pixelmod.dSYM/Contents/Resources/DWARF/: pixelmod
SDL_Demo/writePixel.dSYM/Contents/: Info.plist
SDL_Demo/writePixel.dSYM/Contents/Resources/DWARF/: writePixel
asm/: .arith_test.gb.swp  .stack_test.gb.swp  Makefile  arith_test.asm  bitop_test.asm  bitshift_test.asm  demo.asm  first.asm  gb_bootrom.asm  halt.asm  hello.asm  jump_test.asm  ld_test.asm  ld_test_2.asm  render_test.asm  stack_test.asm
gb.dSYM/Contents/Resources/DWARF/: gb
